--- a/src/app/components/admin-user/admin-user.component.html
+++ b/src/app/components/admin-user/admin-user.component.html
@@ -16,7 +16,7 @@
     <label for="company">company</label>
     <select name="company" formControlName="company">
       <option value="">select company</option>
-      <option *ngFor="let company of companyService.getCompanies()" [value]="company._id">{{company.name}}</option>
+      <option *ngFor="let company of companyService.companies" [value]="company._id">{{company.name}}</option>
     </select>
     <p *ngIf="formService.checkInputField(registerForm, 'company', submitted)" class="error">!</p>
   </div>
