adding inputGroup in css againg

--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -54,7 +54,8 @@ form {
     }
 }
 
-.projectRow {
+.projectRow,
+.inputGroup {
     padding: 2px 15px;
     display: flex;
     justify-content: flex-start;
