adding toasters everywhere

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-@import 'variables';
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
+
+@import "variables";
+@import "~ngx-toastr/toastr";
 
 * {
     padding: 0;
