styling of the header and form + adding icons!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<div class="wrapper">
-  <header class="logo">
-    <img src="/assets/images/infitro-logo.svg" class="logo" alt="Infiltro" routerLink="/">
+
+  <header>
+    <div class="wrapper">
+      <img src="/assets/images/infitro-logo.svg" class="logo" alt="Infiltro" routerLink="/">
+      <app-nav></app-nav>
+    </div>
   </header>
-
-  <app-nav></app-nav>
-
+<div class="wrapper">
   <main>
     <router-outlet></router-outlet>
   </main>
