--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -5,14 +5,15 @@ nav {
     float: left;
     width: 100%;
     margin-bottom: 15px;
-    border-top: 1px solid $infiltro-border-grey;
-    border-bottom: 1px solid $infiltro-border-grey;
+    // border-top: 1px solid $infiltro-border-grey;
+    // border-bottom: 1px solid $infiltro-border-grey;
 }
 
 a {
     display: block;
     position: relative;
-    float: left;
+    // float: left;
+    text-align: right;
     color: inherit;
     text-decoration: none;
     text-transform: uppercase;
@@ -38,7 +39,7 @@ a {
     position: absolute;
     z-index: 1;
     display: none;
-    left: 0;
+    right: 0;
     top: 28px;
 
     a {
