--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -60,7 +60,7 @@ header {
 
 
 main {
-    padding: 0 15px;
+    // padding: 0 15px;
     border-left: 1px solid $infiltro-border-grey;
     border-right: 1px solid $infiltro-border-grey;
 }
