--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -3,23 +3,74 @@
 .controls {
     display: flex;
     justify-content: flex-start;
+    border-bottom: 1px solid $infiltro-border-grey;
+    height: 40px;
 
     .btn {
         display: flex;
         align-items: center;
-        background-color: $infiltro-red;
-        color: #fff;
         text-decoration: none;
-        padding: 5px;
+        padding-left: 5px;
         padding-right: 9px;
+        cursor: pointer;
+
+        &.red {
+            background-color: $infiltro-red;
+            color: #fff;
+
+            &:hover {
+                background-color: darken($infiltro-red, 10%);
+            }
+        }
 
         img {
             width: 25px;
             height: auto;
         }
 
+
+    }
+
+    .filter {
+        position: relative;
+        padding: 0 20px;
+        border-right: 1px solid $infiltro-border-grey;
+
+        .dropdown {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: #fff;
+            border: 1px solid $infiltro-border-grey;
+
+            .item {
+                display: flex;
+                align-content: center;
+                white-space: nowrap;
+                padding: 1px 10px 1px 2px;
+                cursor: pointer;
+
+                img {
+                    margin-right: 5px;
+                }
+                
+                span {
+                    line-height: 25px;
+                }
+
+                &:hover {
+                    background-color: darken(#fff, 10%);
+                }
+            }
+        }
+
         &:hover {
-            background-color: darken($infiltro-red, 10%);
+            background-color: darken(#fff, 10%);
+
+            .dropdown {
+                display: block;
+            }
         }
     }
 }
@@ -27,12 +78,19 @@
 .project {
     padding: 15px;
     border-bottom: 1px solid $infiltro-border-grey;
-
-    &:first-child {
-        border-top: 1px solid $infiltro-border-grey;
-    }
 }
 
 .title {
     font-weight: bold;
+}
+
+.empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 200px);
+
+    >* {
+        margin-right: 20px;
+    }
 }
